# rust-training

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
content/: CATALOG.md
content/modules/: 00-basics.md  01-vectors.md  02-strings.md  03-control-flow.md  04-functions.md  05-collections.md  06-options-results.md  07-files.md  08-ownership-borrowing.md  09-tuples-structs-enums.md  10-traits-generics-lifetimes.md  11-arrays-slices.md  12-iterators.md  13-pattern-matching.md  14-tests.md  15-modules-crates.md  16-error-handling.md  17-cli-input.md  18-smart-pointers.md
src/: analyzer.rs  ast.rs  catalog.rs  compiler.rs  content.rs  domain.rs  embedded_content.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: nsis-hooks.nsh
src/modules/: collections.rs  control_flow.rs  files.rs  functions.rs  mod.rs  options_results.rs  strings.rs  vectors.rs
ui/: app.js  index.html  styles.css
