[package]
name = "rust-training-tauri"
version = "0.1.3"
edition = "2024"

[lib]
name = "rust_training_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rust-training = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
